@@ -213,6 +213,7 @@ tweak hide-priority
 tweak kitchen-prefs-empty
 tweak max-wheelbarrow
 tweak shift-8-scroll
+tweak stone-status-all
 tweak title-start-rename
 tweak tradereq-pet-gender
 
